--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,438 @@
 @tailwind utilities;
 
 @layer base {
+  :root {
+    --background-base: #121212;
+    --background-highlight: #1a1a1a;
+    --background-press: #000;
+    --background-elevated-base: #242424;
+    --background-elevated-highlight: #2a2a2a;
+    --background-elevated-press: #000;
+    --background-tinted-base: hsla(0, 0%, 100%, 0.07);
+    --background-tinted-highlight: hsla(0, 0%, 100%, 0.1);
+    --background-tinted-press: hsla(0, 0%, 100%, 0.04);
+
+    --text-base: #fff;
+    --text-subdued: #a7a7a7;
+    --text-bright-accent: #1ed760;
+    --text-negative: #f15e6c;
+    --text-warning: #ffa42b;
+    --text-positive: #1ed760;
+    --text-announcement: #3d91f4;
+
+    --essential-base: #fff;
+    --essential-subdued: #727272;
+    --essential-bright-accent: #1ed760;
+    --essential-negative: #e91429;
+    --essential-warning: #ffa42b;
+    --essential-positive: #1ed760;
+    --essential-announcement: #0d72ea;
+
+    --decorative-base: #fff;
+    --decorative-subdued: #292929;
+
+    --text-size-smaller-2: 0.6875rem;
+    --text-size-smaller: 0.8125rem;
+    --text-size-base: 1rem;
+    --text-size-larger: 1.25rem;
+    --text-size-larger-2: 1.5rem;
+    --text-size-larger-3: 2rem;
+    --text-size-larger-4: 2.5rem;
+    --text-size-larger-5: 3rem;
+
+    --border-width-hairline: 1px;
+    --border-width-thin: 2px;
+    --border-width-thick: 4px;
+    --border-width-thicker: 8px;
+    --border-width-focus: 3px;
+
+    --graphic-size-decorative-smaller-2: 12px;
+    --graphic-size-decorative-smaller: 16px;
+    --graphic-size-decorative-base: 24px;
+    --graphic-size-decorative-larger: 32px;
+    --graphic-size-decorative-larger-2: 40px;
+    --graphic-size-decorative-larger-3: 48px;
+    --graphic-size-decorative-larger-4: 64px;
+    --graphic-size-decorative-larger-5: 88px;
+    --graphic-size-informative-smaller-2: 0.75rem;
+    --graphic-size-informative-smaller: 1rem;
+    --graphic-size-informative-base: 1.5rem;
+    --graphic-size-informative-larger: 2rem;
+    --graphic-size-informative-larger-2: 2.5rem;
+    --graphic-size-informative-larger-3: 3rem;
+    --graphic-size-informative-larger-4: 4rem;
+    --graphic-size-informative-larger-5: 5.5rem;
+
+    --spacing-tighter-5: 2px;
+    --spacing-tighter-4: 4px;
+    --spacing-tighter-3: 6px;
+    --spacing-tighter-2: 8px;
+    --spacing-tighter: 12px;
+    --spacing-base: 16px;
+    --spacing-looser: 20px;
+    --spacing-looser-2: 24px;
+    --spacing-looser-3: 32px;
+    --spacing-looser-4: 40px;
+    --spacing-looser-5: 48px;
+    --spacing-looser-6: 64px;
+
+    --control-size-smaller: 32px;
+    --control-size-base: 48px;
+    --control-size-larger: 56px;
+
+    --layout-margin-tighter: 16px;
+    --layout-margin-base: 16px;
+    --layout-margin-looser: 24px;
+
+    --corner-radius-smaller: 2px;
+    --corner-radius-base: 4px;
+    --corner-radius-larger: 6px;
+    --corner-radius-larger-2: 8px;
+    --corner-radius-larger-3: 16px;
+
+    @media screen(md) {
+      --text-size-smaller-2: 0.75rem;
+      --text-size-smaller: 0.875rem;
+      --text-size-base: 1rem;
+      --text-size-larger: 1.5rem;
+      --text-size-larger-2: 2rem;
+      --text-size-larger-3: 3rem;
+      --text-size-larger-4: 4rem;
+      --text-size-larger-5: 6rem;
+
+      --border-width-hairline: 1px;
+      --border-width-thin: 2px;
+      --border-width-thick: 4px;
+      --border-width-thicker: 8px;
+      --border-width-focus: 3px;
+
+      --graphic-size-decorative-smaller-2: 12px;
+      --graphic-size-decorative-smaller: 16px;
+      --graphic-size-decorative-base: 24px;
+      --graphic-size-decorative-larger: 32px;
+      --graphic-size-decorative-larger-2: 40px;
+      --graphic-size-decorative-larger-3: 48px;
+      --graphic-size-decorative-larger-4: 64px;
+      --graphic-size-decorative-larger-5: 88px;
+      --graphic-size-informative-smaller-2: 0.75rem;
+      --graphic-size-informative-smaller: 1rem;
+      --graphic-size-informative-base: 1.5rem;
+      --graphic-size-informative-larger: 2rem;
+      --graphic-size-informative-larger-2: 2.5rem;
+      --graphic-size-informative-larger-3: 3rem;
+      --graphic-size-informative-larger-4: 4rem;
+      --graphic-size-informative-larger-5: 5.5rem;
+
+      --spacing-tighter-5: 2px;
+      --spacing-tighter-4: 4px;
+      --spacing-tighter-3: 6px;
+      --spacing-tighter-2: 8px;
+      --spacing-tighter: 12px;
+      --spacing-base: 16px;
+      --spacing-looser: 24px;
+      --spacing-looser-2: 32px;
+      --spacing-looser-3: 48px;
+      --spacing-looser-4: 64px;
+      --spacing-looser-5: 96px;
+      --spacing-looser-6: 128px;
+
+      --control-size-smaller: 32px;
+      --control-size-base: 48px;
+      --control-size-larger: 56px;
+
+      --layout-margin-tighter: 24px;
+      --layout-margin-base: 32px;
+      --layout-margin-looser: 64px;
+
+      --corner-radius-smaller: 2px;
+      --corner-radius-base: 4px;
+      --corner-radius-larger: 6px;
+      --corner-radius-larger-2: 8px;
+      --corner-radius-larger-3: 16px;
+    }
+  }
+
   button {
     vertical-align: middle;
+  }
+}
+
+@layer components {
+  .theme-accent {
+    --background-base: #1ed760;
+    --background-highlight: #1fdf64;
+    --background-press: #169c46;
+    --background-elevated-base: #1fdf64;
+    --background-elevated-highlight: #1fdf64;
+    --background-elevated-press: #169c46;
+    --background-tinted-base: #1ed760;
+    --background-tinted-highlight: #1ed760;
+    --background-tinted-press: #1ed760;
+
+    --text-base: #000;
+    --text-subdued: #000;
+    --text-bright-accent: #000;
+    --text-negative: #000;
+    --text-warning: #000;
+    --text-positive: #000;
+    --text-announcement: #000;
+
+    --essential-base: #000;
+    --essential-subdued: #000;
+    --essential-bright-accent: #000;
+    --essential-negative: #000;
+    --essential-warning: #000;
+    --essential-positive: #000;
+    --essential-announcement: #000;
+
+    --decorative-base: #000;
+    --decorative-subdued: #1abc54;
+  }
+
+  .theme-negative {
+    --background-base: #e91429;
+    --background-highlight: #de1327;
+    --background-press: #920d1a;
+    --background-elevated-base: #de1327;
+    --background-elevated-highlight: #de1327;
+    --background-elevated-press: #920d1a;
+    --background-tinted-base: #e91429;
+    --background-tinted-highlight: #e91429;
+    --background-tinted-press: #e91429;
+
+    --text-base: #fff;
+    --text-subdued: #fff;
+    --text-bright-accent: #fff;
+    --text-negative: #fff;
+    --text-warning: #fff;
+    --text-positive: #fff;
+    --text-announcement: #fff;
+
+    --essential-base: #fff;
+    --essential-subdued: #fff;
+    --essential-bright-accent: #fff;
+    --essential-negative: #fff;
+    --essential-warning: #fff;
+    --essential-positive: #fff;
+    --essential-announcement: #fff;
+
+    --decorative-base: #fff;
+    --decorative-subdued: #ee3a4c;
+  }
+
+  .theme-warning {
+    --background-base: #ffa42b;
+    --background-highlight: #ffaf45;
+    --background-press: #c57100;
+    --background-elevated-base: #ffaf45;
+    --background-elevated-highlight: #ffaf45;
+    --background-elevated-press: #c57100;
+    --background-tinted-base: #ffa42b;
+    --background-tinted-highlight: #ffa42b;
+    --background-tinted-press: #ffa42b;
+
+    --text-base: #000;
+    --text-subdued: #000;
+    --text-bright-accent: #000;
+    --text-negative: #000;
+    --text-warning: #000;
+    --text-positive: #000;
+    --text-announcement: #000;
+
+    --essential-base: #000;
+    --essential-subdued: #000;
+    --essential-bright-accent: #000;
+    --essential-negative: #000;
+    --essential-warning: #000;
+    --essential-positive: #000;
+    --essential-announcement: #000;
+
+    --decorative-base: #000;
+    --decorative-subdued: #f18900;
+  }
+
+  .theme-positive {
+    --background-base: #1ed760;
+    --background-highlight: #1fdf64;
+    --background-press: #169c46;
+    --background-elevated-base: #1fdf64;
+    --background-elevated-highlight: #1fdf64;
+    --background-elevated-press: #169c46;
+    --background-tinted-base: #1ed760;
+    --background-tinted-highlight: #1ed760;
+    --background-tinted-press: #1ed760;
+
+    --text-base: #000;
+    --text-subdued: #000;
+    --text-bright-accent: #000;
+    --text-negative: #000;
+    --text-warning: #000;
+    --text-positive: #000;
+    --text-announcement: #000;
+
+    --essential-base: #000;
+    --essential-subdued: #000;
+    --essential-bright-accent: #000;
+    --essential-negative: #000;
+    --essential-warning: #000;
+    --essential-positive: #000;
+    --essential-announcement: #000;
+
+    --decorative-base: #000;
+    --decorative-subdued: #1abc54;
+  }
+
+  .theme-announcement {
+    --background-base: #0d72ea;
+    --background-highlight: #0c6ddf;
+    --background-press: #084791;
+    --background-elevated-base: #0c6ddf;
+    --background-elevated-highlight: #0c6ddf;
+    --background-elevated-press: #084791;
+    --background-tinted-base: #0d72ea;
+    --background-tinted-highlight: #0d72ea;
+    --background-tinted-press: #0d72ea;
+
+    --text-base: #fff;
+    --text-subdued: #fff;
+    --text-bright-accent: #fff;
+    --text-negative: #fff;
+    --text-warning: #fff;
+    --text-positive: #fff;
+    --text-announcement: #fff;
+
+    --essential-base: #fff;
+    --essential-subdued: #fff;
+    --essential-bright-accent: #fff;
+    --essential-negative: #fff;
+    --essential-warning: #fff;
+    --essential-positive: #fff;
+    --essential-announcement: #fff;
+
+    --decorative-base: #fff;
+    --decorative-subdued: #2a86f3;
+  }
+
+  .theme-inverted-dark {
+    --background-base: #000;
+    --background-highlight: #0d0d0d;
+    --background-press: #3f3f3f;
+    --background-elevated-base: #0d0d0d;
+    --background-elevated-highlight: #0d0d0d;
+    --background-elevated-press: #3f3f3f;
+    --background-tinted-base: #000;
+    --background-tinted-highlight: #000;
+    --background-tinted-press: #000;
+
+    --text-base: #fff;
+    --text-subdued: #8f8f8f;
+    --text-bright-accent: #1ed760;
+    --text-negative: #fff;
+    --text-warning: #fff;
+    --text-positive: #1ed760;
+    --text-announcement: #fff;
+
+    --essential-base: #fff;
+    --essential-subdued: #5e5e5e;
+    --essential-bright-accent: #1ed760;
+    --essential-negative: #fff;
+    --essential-warning: #fff;
+    --essential-positive: #1ed760;
+    --essential-announcement: #fff;
+
+    --decorative-base: #fff;
+    --decorative-subdued: #1f1f1f;
+  }
+
+  .theme-inverted-light {
+    --background-base: #fff;
+    --background-highlight: #f6f6f6;
+    --background-press: #b7b7b7;
+    --background-elevated-base: #f6f6f6;
+    --background-elevated-highlight: #f6f6f6;
+    --background-elevated-press: #b7b7b7;
+    --background-tinted-base: #fff;
+    --background-tinted-highlight: #fff;
+    --background-tinted-press: #fff;
+
+    --text-base: #000;
+    --text-subdued: #5e5e5e;
+    --text-bright-accent: #12833a;
+    --text-negative: #000;
+    --text-warning: #000;
+    --text-positive: #12833a;
+    --text-announcement: #000;
+
+    --essential-base: #000;
+    --essential-subdued: #8f8f8f;
+    --essential-bright-accent: #17a449;
+    --essential-negative: #000;
+    --essential-warning: #000;
+    --essential-positive: #17a449;
+    --essential-announcement: #000;
+
+    --decorative-base: #000;
+    --decorative-subdued: #dedede;
+  }
+
+  .theme-muted-accent {
+    --background-base: #000;
+    --background-highlight: #0d0d0d;
+    --background-press: #3f3f3f;
+    --background-tinted-base: hsla(0, 0%, 100%, 0.1);
+    --background-tinted-highlight: hsla(0, 0%, 100%, 0.13);
+    --background-tinted-press: hsla(0, 0%, 100%, 0.06);
+    --background-elevated-base: #0d0d0d;
+    --background-elevated-highlight: #0d0d0d;
+    --background-elevated-press: #3f3f3f;
+
+    --text-base: #fff;
+    --text-subdued: #9e9e9e;
+    --text-bright-accent: #1ed760;
+    --text-negative: #fff;
+    --text-warning: #fff;
+    --text-positive: #1ed760;
+    --text-announcement: #fff;
+
+    --essential-base: #fff;
+    --essential-subdued: #6a6a6a;
+    --essential-bright-accent: #1ed760;
+    --essential-negative: #fff;
+    --essential-warning: #fff;
+    --essential-positive: #1ed760;
+    --essential-announcement: #fff;
+
+    --decorative-base: #fff;
+    --decorative-subdued: #1f1f1f;
+  }
+
+  .theme-over-media {
+    --background-base: rgba(0, 0, 0, 0.54);
+    --background-highlight: rgba(0, 0, 0, 0.56);
+    --background-press: rgba(0, 0, 0, 0.72);
+    --background-elevated-base: rgba(0, 0, 0, 0.56);
+    --background-elevated-highlight: rgba(0, 0, 0, 0.56);
+    --background-elevated-press: rgba(0, 0, 0, 0.72);
+    --background-tinted-base: rgba(0, 0, 0, 0.54);
+    --background-tinted-highlight: rgba(0, 0, 0, 0.54);
+    --background-tinted-press: rgba(0, 0, 0, 0.54);
+
+    --text-base: #fff;
+    --text-subdued: #fff;
+    --text-bright-accent: #fff;
+    --text-negative: #fff;
+    --text-warning: #fff;
+    --text-positive: #fff;
+    --text-announcement: #fff;
+
+    --essential-base: #fff;
+    --essential-subdued: #fff;
+    --essential-bright-accent: #fff;
+    --essential-negative: #fff;
+    --essential-warning: #fff;
+    --essential-positive: #fff;
+    --essential-announcement: #fff;
+
+    --decorative-base: #fff;
   }
 }
