--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,13 +14,13 @@
     --background-tinted-highlight: hsla(0, 0%, 100%, 0.1);
     --background-tinted-press: hsla(0, 0%, 100%, 0.04);
 
-    --text-base: #fff;
-    --text-subdued: #a7a7a7;
-    --text-bright-accent: #1ed760;
-    --text-negative: #f15e6c;
-    --text-warning: #ffa42b;
-    --text-positive: #1ed760;
-    --text-announcement: #3d91f4;
+    --color-base: #fff;
+    --color-subdued: #a7a7a7;
+    --color-bright-accent: #1ed760;
+    --color-negative: #f15e6c;
+    --color-warning: #ffa42b;
+    --color-positive: #1ed760;
+    --color-announcement: #3d91f4;
 
     --essential-base: #fff;
     --essential-subdued: #727272;
@@ -171,13 +171,13 @@
     --background-tinted-highlight: #1ed760;
     --background-tinted-press: #1ed760;
 
-    --text-base: #000;
-    --text-subdued: #000;
-    --text-bright-accent: #000;
-    --text-negative: #000;
-    --text-warning: #000;
-    --text-positive: #000;
-    --text-announcement: #000;
+    --color-base: #000;
+    --color-subdued: #000;
+    --color-bright-accent: #000;
+    --color-negative: #000;
+    --color-warning: #000;
+    --color-positive: #000;
+    --color-announcement: #000;
 
     --essential-base: #000;
     --essential-subdued: #000;
@@ -202,13 +202,13 @@
     --background-tinted-highlight: #e91429;
     --background-tinted-press: #e91429;
 
-    --text-base: #fff;
-    --text-subdued: #fff;
-    --text-bright-accent: #fff;
-    --text-negative: #fff;
-    --text-warning: #fff;
-    --text-positive: #fff;
-    --text-announcement: #fff;
+    --color-base: #fff;
+    --color-subdued: #fff;
+    --color-bright-accent: #fff;
+    --color-negative: #fff;
+    --color-warning: #fff;
+    --color-positive: #fff;
+    --color-announcement: #fff;
 
     --essential-base: #fff;
     --essential-subdued: #fff;
@@ -233,13 +233,13 @@
     --background-tinted-highlight: #ffa42b;
     --background-tinted-press: #ffa42b;
 
-    --text-base: #000;
-    --text-subdued: #000;
-    --text-bright-accent: #000;
-    --text-negative: #000;
-    --text-warning: #000;
-    --text-positive: #000;
-    --text-announcement: #000;
+    --color-base: #000;
+    --color-subdued: #000;
+    --color-bright-accent: #000;
+    --color-negative: #000;
+    --color-warning: #000;
+    --color-positive: #000;
+    --color-announcement: #000;
 
     --essential-base: #000;
     --essential-subdued: #000;
@@ -264,13 +264,13 @@
     --background-tinted-highlight: #1ed760;
     --background-tinted-press: #1ed760;
 
-    --text-base: #000;
-    --text-subdued: #000;
-    --text-bright-accent: #000;
-    --text-negative: #000;
-    --text-warning: #000;
-    --text-positive: #000;
-    --text-announcement: #000;
+    --color-base: #000;
+    --color-subdued: #000;
+    --color-bright-accent: #000;
+    --color-negative: #000;
+    --color-warning: #000;
+    --color-positive: #000;
+    --color-announcement: #000;
 
     --essential-base: #000;
     --essential-subdued: #000;
@@ -295,13 +295,13 @@
     --background-tinted-highlight: #0d72ea;
     --background-tinted-press: #0d72ea;
 
-    --text-base: #fff;
-    --text-subdued: #fff;
-    --text-bright-accent: #fff;
-    --text-negative: #fff;
-    --text-warning: #fff;
-    --text-positive: #fff;
-    --text-announcement: #fff;
+    --color-base: #fff;
+    --color-subdued: #fff;
+    --color-bright-accent: #fff;
+    --color-negative: #fff;
+    --color-warning: #fff;
+    --color-positive: #fff;
+    --color-announcement: #fff;
 
     --essential-base: #fff;
     --essential-subdued: #fff;
@@ -326,13 +326,13 @@
     --background-tinted-highlight: #000;
     --background-tinted-press: #000;
 
-    --text-base: #fff;
-    --text-subdued: #8f8f8f;
-    --text-bright-accent: #1ed760;
-    --text-negative: #fff;
-    --text-warning: #fff;
-    --text-positive: #1ed760;
-    --text-announcement: #fff;
+    --color-base: #fff;
+    --color-subdued: #8f8f8f;
+    --color-bright-accent: #1ed760;
+    --color-negative: #fff;
+    --color-warning: #fff;
+    --color-positive: #1ed760;
+    --color-announcement: #fff;
 
     --essential-base: #fff;
     --essential-subdued: #5e5e5e;
@@ -357,13 +357,13 @@
     --background-tinted-highlight: #fff;
     --background-tinted-press: #fff;
 
-    --text-base: #000;
-    --text-subdued: #5e5e5e;
-    --text-bright-accent: #12833a;
-    --text-negative: #000;
-    --text-warning: #000;
-    --text-positive: #12833a;
-    --text-announcement: #000;
+    --color-base: #000;
+    --color-subdued: #5e5e5e;
+    --color-bright-accent: #12833a;
+    --color-negative: #000;
+    --color-warning: #000;
+    --color-positive: #12833a;
+    --color-announcement: #000;
 
     --essential-base: #000;
     --essential-subdued: #8f8f8f;
@@ -388,13 +388,13 @@
     --background-elevated-highlight: #0d0d0d;
     --background-elevated-press: #3f3f3f;
 
-    --text-base: #fff;
-    --text-subdued: #9e9e9e;
-    --text-bright-accent: #1ed760;
-    --text-negative: #fff;
-    --text-warning: #fff;
-    --text-positive: #1ed760;
-    --text-announcement: #fff;
+    --color-base: #fff;
+    --color-subdued: #9e9e9e;
+    --color-bright-accent: #1ed760;
+    --color-negative: #fff;
+    --color-warning: #fff;
+    --color-positive: #1ed760;
+    --color-announcement: #fff;
 
     --essential-base: #fff;
     --essential-subdued: #6a6a6a;
@@ -419,13 +419,13 @@
     --background-tinted-highlight: rgba(0, 0, 0, 0.54);
     --background-tinted-press: rgba(0, 0, 0, 0.54);
 
-    --text-base: #fff;
-    --text-subdued: #fff;
-    --text-bright-accent: #fff;
-    --text-negative: #fff;
-    --text-warning: #fff;
-    --text-positive: #fff;
-    --text-announcement: #fff;
+    --color-base: #fff;
+    --color-subdued: #fff;
+    --color-bright-accent: #fff;
+    --color-negative: #fff;
+    --color-warning: #fff;
+    --color-positive: #fff;
+    --color-announcement: #fff;
 
     --essential-base: #fff;
     --essential-subdued: #fff;
