chore(storybook): update theme
Update theme with dark colors. Make sure the correct font size is loaded by providing custom css
property

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,8 @@
     --decorative-base: #fff;
     --decorative-subdued: #292929;
 
+    --font-family-sans: "Figtree", sans-serif;
+
     --font-size-smaller-2: 0.6875rem;
     --font-size-smaller: 0.8125rem;
     --font-size-base: 1rem;
